--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ version: "3.8"
 services:
 
   server_db:
-    image: saulofelipe/rinha-db-server
+    build: sqlite-server
     hostname: server_db
     environment:
       - DB_PATHNAME=/app/database/db.sqlite
@@ -17,7 +17,6 @@ services:
 
   server_01: &api
     build: main-server
-    image: saulofelipe/rinha-api
     hostname: server_01
     ports:
       - 4001:3001
