--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "1.2"
+          cpus: "0.7"
           memory: "267MB"
     volumes:
       - db_volume:/app/database:rw
+      - lock_volume:/app/racecondition:rw
     environment:
       - PRODUCTION=true
 
@@ -26,6 +27,7 @@ services:
       - server_01
     environment:
       - CUSTOM_TRIGGER=true
+      - PRODUCTION=true # required
 
   nginx:
     image: nginx:latest
@@ -43,3 +45,4 @@ services:
 
 volumes:
   db_volume:
+  lock_volume:
